@@ -19,6 +19,11 @@ installation-guide (2009xxxx) UNRELEASED; urgency=low
     - Show some sections on mipsel that apply there too.
     - Say that the Cobalt Qube 2700 (Qube1) is no longer supported.
 
+  [ Colin Watson ]
+  * Merge from Ubuntu:
+    - Document partman/mount_style, which controls how filesystems are
+      mounted.
+
  -- Frans Pop <fjp@debian.org>  Tue, 28 Apr 2009 18:13:46 +0200
 
 installation-guide (20090427) unstable; urgency=low
